# notcord

./: .gitignore  Cargo.toml  Procfile  README.md  Rocket.toml  app.json  data.txt  gource.sh  gource.txt  readme.txt
app/: .env.production  README.md  package-lock.json  package.json
app/public/: privacy.html
app/src/: App.css  App.js  index.js  privacy.html
app/src/Components/: CreateNewGroup.js  Friend.js  Friends.js  Group.js  Login.js  Settings.js  Sidebar.js  Signup.js  Signup.test.js
app/src/Components/Group/: CreateNewGroup.js
app/src/Components/Login/: Login.js  Login.test.js
app/src/Components/Settings/: Settings.js
app/src/Components/Sidebar/: Sidebar.css  Sidebar.js  Sidebar.test.js
app/src/Components/Signup/: Signup.js  Signup.test.js
app/src/Components/Tests/: Group.test.js  Login.test.js  Settings.test.js  Signup.test.js
src/: main.rs  response.rs  routes.rs  state.rs  test.rs  tests_main.rs  util.rs
tests/: intergration_test.rs
