[package]
name = "notcord"
version = "0.1.0"
authors = ["William McPherson <willmcpherson2@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "sqlite_pool"]
