[package]
name = "notcord"
version = "0.1.0"
authors = ["William McPherson <willmcpherson2@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
rocket_cors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.9.0"
figment = { version = "0.10", features = ["toml", "env"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "sqlite_pool"]
